# wmrio

./: .gitignore  Cargo.toml  README.md  watch.sh
content/pages/: about.md
content/posts/: post1.md  post2.md
src/: compile.rs  content.rs  lib.rs  path_manager.rs  render.rs
src/serve/: main.rs
templates/default/: index.html
themes/default/: main.css  package-lock.json  package.json  tailwind.config.js
themes/default/static/: tailwind.css
themes/default/templates/: base.html  index.html  nav.html  page.html  post.html
