[package]
name = "wmrio"
version = "0.1.0"
edition = "2018"
default-run = "serve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[lib]
name = "wmrio"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.0"
tera = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"